--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "jetifier": "^1.6.5",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-paper": "^3.6.0",
-    "react-native-responsive-screen": "^1.4.0",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
